# Career-Consultant-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: sample_career_data.md  skills_framework.md
docs/: architecture.md  evaluation.md  milestone1_audit.md  rag_pipeline.md  security.md  supervisor_feedback.md  workflows.md
scripts/: esco_backfill_live.py  evaluate_rag.py  ingest_pilot.py  ingest_raw.py  run_ragas.py  test_rag.py
src/career_intel/: __init__.py
streamlit_app/: api_client.py  app.py  audiorec_bridge.py  credential_state.py  model_config.py  requirements.txt  runtime_config.py  security_controls.py  sources_panel.py  speech_client.py  speech_session.py  token_cost.py  usage_tracking.py  youtube_service.py
streamlit_app/external_sources/: __init__.py
streamlit_app/services/: __init__.py  chat_service.py
tests/: conftest.py
tests/api/: test_answer_length.py  test_chat_regression.py  test_cv_endpoint.py  test_health.py  test_provider_model_discovery.py  test_speech_transcribe.py
tests/orchestration/: test_e2e_journeys.py  test_intent_routing.py  test_runtime_routing.py  test_source_inventory.py  test_synthesize_behavior.py
tests/rag/: test_citation.py  test_esco_relation_docs.py  test_esco_rerank.py  test_eval_runner.py  test_retriever_consistency.py
tests/security/: test_admin_auth.py  test_adversarial.py  test_cv_security.py  test_guards.py  test_hardening.py  test_injection.py  test_rate_limit.py
tests/streamlit/: test_api_client.py  test_audiorec_bridge.py  test_credential_state.py  test_direct_chat_service.py  test_model_config.py  test_runtime_config.py  test_sources_panel.py  test_speech_client.py  test_speech_session.py  test_youtube_service.py
tests/tools/: test_tool_schemas.py
tests/unit/: test_answer_length_prompt.py  test_chunking.py  test_cv_processor.py  (+11 more)
(+54 files in other folders)
